deploy/go/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chihuo-go
  labels:
    app.kubernetes.io/part-of: chihuo
