deploy/go/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chihuo-go-api
  labels:
    app.kubernetes.io/name: chihuo-go-api
    app.kubernetes.io/part-of: chihuo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chihuo-go-api
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
